--- a/android/build.gradle
+++ b/android/build.gradle
@@ -75,10 +75,13 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'  // From node_modules
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    implementation files('libs/pushservice-6.7.3.20.jar')
+    compile files('libs/pushservice-6.7.3.20.jar')
+    compile 'me.leolin:ShortcutBadger:1.1.8@aar'
 
+    implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.15.2'
     implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.15.+'
     implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.15.+@aar') { transitive = true }
+    implementation ('com.amazonaws:aws-android-sdk-cognitoauth:2.9.+@aar') { transitive = true }
 }
 
 def configureReactNativePom(def pom) {
