--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.reactlibrary">
 
-    <!-- Push service 运行需要的权限 -->
+    <!-- Push service permission -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,24 +13,22 @@
     <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
     <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-    <!-- 富媒体需要声明的权限 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
 
-    <!-- 适配Android N系统必需的ContentProvider写权限声明，写权限包含应用包名-->
-    <!--<uses-permission android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.alones.reactnative.baidupush" />-->
-    <!--<permission-->
-    <!--android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.alones.reactnative.baidupush"-->
-    <!--android:protectionLevel="normal"></permission>-->
-
-
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!-- add to your manifest -->
+    <!--<uses-permission android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.YOUR_PACKAGE_NAME" />-->
+    <!--<permission-->
+    <!--android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.YOUR_PACKAGE_NAME"-->
+    <!--android:protectionLevel="normal">-->
+    <!--</permission>-->
 
     <application
         android:label="@string/app_name">
 
-        <!-- push富媒体，使用富媒体推送必须声明 -->
         <activity
             android:name="com.baidu.android.pushservice.richmedia.MediaViewActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -40,15 +38,11 @@
             android:configChanges="orientation|keyboardHidden"
             android:label="MediaListActivity"
             android:launchMode="singleTask"></activity>
-        <!-- push富媒体结束 -->
 
-        <!-- push应用定义消息receiver声明 -->
+        <!-- handler baidu push notification -->
         <receiver android:name="com.reactlibrary.AwsBaiduPushNotificationMessagingService">
             <intent-filter>
-
-                <!-- 接收push消息 -->
                 <action android:name="com.baidu.android.pushservice.action.MESSAGE" />
-                <!-- 接收bind,unbind,fetch,delete等反馈消息 -->
                 <action android:name="com.baidu.android.pushservice.action.RECEIVE" />
                 <action android:name="com.baidu.android.pushservice.action.notification.CLICK" />
             </intent-filter>
@@ -62,7 +56,7 @@
 <!--            </intent-filter>-->
 <!--        </receiver>-->
 
-        <!-- push必须的receviver和service声明 -->
+        <!-- push receiver service -->
         <receiver
             android:name="com.baidu.android.pushservice.PushServiceReceiver"
             android:process=":bdservice_v1">
@@ -71,7 +65,6 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <action android:name="com.baidu.android.pushservice.action.notification.SHOW" />
                 <action android:name="com.baidu.android.pushservice.action.media.CLICK" />
-                <!-- 以下四项为可选的action声明，可大大提高service存活率和消息到达速度 -->
                 <action android:name="android.intent.action.MEDIA_MOUNTED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
@@ -103,18 +96,14 @@
             android:name="com.baidu.android.pushservice.CommandService"
             android:exported="true" />
 
-        <!-- 适配Android N系统必需的ContentProvider声明，写权限包含应用包名-->
+        <!-- add to your manifest-->
         <!--<provider-->
         <!--android:name="com.baidu.android.pushservice.PushInfoProvider"-->
-        <!--android:authorities="com.alones.reactnative.baidupush.bdpush"-->
+        <!--android:authorities="com.rwsentosa.beu.bdpush"-->
         <!--android:exported="true"-->
         <!--android:protectionLevel="signature"-->
-        <!--android:writePermission="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.alones.reactnative.baidupush" />-->
+        <!--android:writePermission="baidu.push.permission.WRITE_PUSHINFOPROVIDER.YOUR_PACKAGE_NAME" />-->
 
-        <!-- 在百度开发者中心查询应用的API Key -->
-        <!-- <meta-data
-            android:name="baidu_push_api_key"
-            android:value="INSERT YOUR OWN APIKEY HERE" /> -->
         <!-- Amazon Pinpoint Notification Receiver -->
         <receiver android:name="com.amazonaws.mobileconnectors.pinpoint.targeting.notification.PinpointNotificationReceiver">
             <intent-filter>
