--- a/android/build.gradle
+++ b/android/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'  // From node_modules
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile files('libs/pushservice-6.7.3.20.jar')
+    // compile files('libs/pushservice-6.7.3.20.jar')
     compile 'me.leolin:ShortcutBadger:1.1.8@aar'
 
     implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.15.2'
